change resume for notes

--- a/intro_to_quantum_inf_processing/notes.tex
+++ b/intro_to_quantum_inf_processing/notes.tex
@@ -7,7 +7,7 @@
 \usepackage{varwidth} % dans le préambule
 
 \thispagestyle{fancy}
-\title{Summary of introduction to information processing}
+\title{Notes of introduction to information processing}
 \author{Dario Marcone}
 \date{Samedi 08 novembre 2025}
 
