--- a/intro_to_quantum_inf_processing/notes.tex
+++ b/intro_to_quantum_inf_processing/notes.tex
@@ -1,5 +1,5 @@
 \documentclass[10 ,titlepage, a4paper]{article}
-    \usepackage{mystyle}
+\usepackage{mystyle}
 \usepackage{tikz}
 \usetikzlibrary{decorations.pathmorphing} % indispensable !
 \usetikzlibrary{positioning}
@@ -998,6 +998,125 @@
 
        But what if we have both bitflip and phaseflip errors at the same time?
     \subsection{9-qubit Shor code}
+        9-qubit Shor code is just a code concatenation: 
+
+        \textbf{Phaseflip encoding:} 
+        \begin{align*} 
+            \ket{0} &\to \ket{+++}, \\
+            \ket{1} &\to \ket{---}.\\
+        \end{align*}
+
+        \textbf{Bitflip encoding:} 
+        \begin{align*} 
+            \ket{0} &\to\ket{000}, \\
+            \ket{1} &\to \ket{111}.
+        \end{align*}
+
+        \textbf{Shor encoding:}
+        \begin{align*} 
+            \ket{0} \to \ket{000} \to \ket{+++} &\to \frac{1}{\sqrt{8}}\left(\ket{000}+\ket{111}\right)^{\otimes 3}, \\
+            \underbrace{\ket{1} \to \ket{111} \to \ket{---}}_{\text{Phaseflip encoding}} &\to \underbrace{\frac{1}{\sqrt{8}}\left(\ket{000}-\ket{111}\right)^{\otimes 3}}_{\text{Bitflip encoding}}.
+        \end{align*}
+        \begin{center}
+        \includegraphics[width=12cm]{images/5.png}
+        \end{center}
+        
+        \begin{remark}{Apparté}
+            Something important in QECC, is that quantum errors can be discretized, it means that: \important{correcting X,Y,Z} errors suffices to correct all quantum errors (though there are infinitely many).
+            
+            \vspace{1em}
+            \textbf{Proof by example of Shor code:}
+
+            Suppose we had $R_{\theta \text{ error}} = \cos \theta - i\sin \theta Z$, then errored encoded state: $\ket{\widetilde{\psi}}=R_{\theta}\ket{\widetilde{\psi}}=\cos \theta \ket{\bar{\psi}}-i\sin \theta Z \ket{\bar{\psi}}$.
+
+            After applying the Shor code detection circuit: 
+            \[\cos \theta \ket{\bar{\psi}}\ket{I}_{\text{SYN}}-i\sin \theta Z \ket{ \bar{\psi}}\ket{Z}_{\text{SYN}} \to \text{meas. syndrome register} \begin{functionbypart}{\to}
+                \ket{\bar{\psi}}\ket{I}_{\text{SYN}} \text{ if }= \cos^2  \\
+                Z\ket{\bar{\psi}}\ket{Z}_{\text{SYN}} \text{ if }= \sin^2
+            \end{functionbypart}
+            \]
+            Note: now the syndrome register is entangled with the system registers.
+        \end{remark}
+        \textbf{Decoder:}
+
+        Let 
+        \begin{align*} 
+            \ket{0} &\to \ket{+++} \to \left(\frac{\ket{000}+\ket{111}}{\sqrt{2}}^{\otimes3}\right)=\ket{\bar{0}}, \\
+            \ket{1} &\to \ket{---} \to \left(\frac{\ket{000}-\ket{111}}{\sqrt{2}}^{\otimes3}\right)=\ket{\bar{1}}.
+        \end{align*}
+        \begin{enumerate}[left=10pt]
+            \item Suppose that only one bitlflip happened, then the bitlfip decoder will decode as usual. 
+            \item Suppose that only one phaseflip happened, then errored state is 
+            \[\frac{1}{\sqrt{8}}\left(\ket{000}+\ket{111}\right)\left(\ket{000}-\ket{111}\right)\left(\ket{000}-\ket{111}\right),\]
+            and the U decoder will decode with ``parity comparison for signs'' between the blocks. It will result as 
+            \[\ket{+}\ket{0}\ket{0} \text{ for the first block, }\ket{-}\ket{0}\ket{0} \text{ for the second and } \ket{-}\ket{0}\ket{0} \text{ for the third.}\] 
+            \item Suppose that both $X_1$ and $Z_1$ happened, the errored state is 
+            \[\left(\ket{100}+\ket{011}\right)\left(\ket{000}-\ket{111}\right)\left(\ket{000}-\ket{111}\right),\]
+            \begin{itemize}[left=10pt, label=\textbullet]
+                \item Check for bitflip error \textrightarrow correct the bitflip error: $\left(\ket{000}+\ket{111}\right)\left(\ket{000}-\ket{111}\right)\left(\ket{000}-\ket{111}\right)$. 
+                \item Check for phaseflip error \textrightarrow correct the phaseflip error.
+            \end{itemize}
+        \end{enumerate}
+        The Shor code can also decode \important{some} 2-qubit errors, consider now this 2 qubits errors $X_1, X_2$. I claim there is no way to correct this error, why? 
+        \begin{align*} 
+            \text{It works with } \ket{\bar{0}} \text{ because:} \underbrace{\left(\ket{110}+\ket{001}\right)}_{\text{it will think error is on }X_3} &\xrightarrow{\text{after correction}} \left(\ket{111}+\ket{000}\right)=\left(\ket{000}+\ket{111}\right), \\
+            \text{but not on } \ket{\bar{1}} \text{ because:} \underbrace{\left(\ket{110}-\ket{001}\right)}_{\text{it will think error is on }X_3} &\xrightarrow{\text{after correction}}\left(\ket{111}-\ket{000}\right) = -\ket{\bar{1}} = e^{i \phi} \text{ if } \phi = \pi, \ket{\bar{1}} \equiv \ket{\bar{1}}, \\
+            \text{ BUT } &\alpha\ket{\bar{0}} + \beta\ket{\bar{1}} \neq \alpha\ket{\bar{0}} - \beta\ket{\bar{1}}.
+        \end{align*}
+    \subsection{Quantum code distance}
+        \textbf{Recall:}
+
+        The classical code distance is the minimum number of bits you need to flip to get from any codeword to any other codeword. Code distance relates to how many bitflip errors a classical code can correct $ \implies \lfloor\frac{\text{disance }-1}{2}\rfloor$.
+        \begin{remark}{Example}
+            \begin{tcolorbox}[rouge]
+                $\{000, 111\} \implies $ number of correctable errors $ =1$, 
+                \[000 \xrightarrow{\text{2 errors}} 011 \text{ will be closer to }111.\]
+            \end{tcolorbox}
+        \end{remark}
+        \begin{tcolorbox}[vert]
+             The Pauli weight is the number of positions where the is a non-I Pauli matrice $\sim$ quantum analog of the number of bitlfips.
+
+            \noindent e.g. $XIX \to \text{ weight } = 2$.
+        \end{tcolorbox}
+        If $\ket{\bar{\psi_1}}, \mathspace \ket{\bar{\psi_2}}$ are two encoded statesw in the same code and $\exists \text{ Pauli }P \text{ s.t. } \ket{\bar{\psi_1}}=P\ket{\bar{\psi_2}}$, then Pauli P is \important{uncorrectable} because it looks just like ``no error on $\ket{\bar{\psi_1}}$''. 
+        \begin{align*} 
+         \text{Quantum code distance }:= \text{ min weight}\left(P\right) \text{ s.t. } P\ket{\bar{\psi_1}}=\ket{\bar{\psi_2}}, \\    
+            \mathspace P = \text{ some Pauli string}, \mathspace \ket{\bar{\psi_1}}, \ket{\bar{\psi_2}} \text{ any two orthogonal code}.
+        \end{align*}
+        Analogous to classical code distance, quantum code with distance d can correct Pauli errors of weights at most $\left\lfloor \frac{d-1}{2} \right\rfloor $.
+        \begin{remark}{Example}
+            \begin{tcolorbox}[rouge]
+                \begin{itemize}[left=10pt, label=\textbullet]
+                    \item $n = \#$ of physical qubits (n-qubit codeword), 
+                    \item $k = \#$ of logical qubits (to encode a k-qubit quantum state), 
+                    \item $d:$ code distance.
+                \end{itemize}
+                \[\mathcal{H}_k \to \text{ ENC } \to \mathcal{H}_n,\]
+                Shor's 9-qubit encode a single qubit into 9 qubit so it's a $\underbrace{\left[\left[n,k,d\right]\right]}_{9,1,3}$, that's why it can correct \important{all} errors of Pauli weight $\left\lfloor \frac{3-1}{2} \right\rfloor $.
+            \end{tcolorbox}
+        \end{remark}
+        \textbf{What properties we want of a good QECC:}
+        \begin{itemize}[left=10pt, label=\textbullet]
+            \item make d as large as possible,
+            \item $\frac{k}{n}$ as large as possible, 
+            \item fast encoding (decoding).
+        \end{itemize}
+        \newpage
+        Let $\left(U, \Sigma\right)$ be a QECC where $U: \mathcal{H}_K \to \mathcal{H}_N$ a map and $\Sigma$ is a set of correctable errors s.t. $\forall E \in \Sigma, \forall \ket{ \psi} \in \mathcal{H}_K$, there is a decoding map that restores the errored state: $D\left(EU\ket{\psi}\bra{\psi}U^{\dagger}E^{\dagger}\right) \propto \ket{\psi}\bra{\psi}$. 
+        \begin{theoreme}
+            If $\left(U, \Sigma\right)$ is a QECC then $\left(U, span\left(\Sigma\right)\right)$ is also a QECC. Then, to correct arbitrary errors like $\alpha E+ \beta F$, it suffices to correct $E,F \implies$ \important{quantum errors can be disretized!}
+        \end{theoreme}
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+
         
         
         
